Initial update to gene list creation & extra gene list creation. Need to double check and finalize.

--- a/feature_selection_analysis/deg_figo.ipynb
+++ b/feature_selection_analysis/deg_figo.ipynb
@@ -3,8 +3,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "iraqi-hepatitis",
-   "metadata": {},
+   "id": "juvenile-session",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -175,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "derived-morris",
+   "id": "catholic-courage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "several-listening",
+   "id": "nervous-spouse",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "greatest-wales",
+   "id": "destroyed-gamma",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "contained-walnut",
+   "id": "green-envelope",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accessible-times",
+   "id": "imposed-postage",
    "metadata": {},
    "source": [
     "# Load data"
@@ -249,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "operating-directory",
+   "id": "exclusive-counter",
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fallen-recommendation",
+   "id": "stock-dimension",
    "metadata": {},
    "source": [
     "# Pre-filter genes"
@@ -361,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "further-holocaust",
+   "id": "filled-entrance",
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "facial-canyon",
+   "id": "comparable-prairie",
    "metadata": {},
    "source": [
     "# Final data prep"
@@ -429,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "square-solomon",
+   "id": "sophisticated-words",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "russian-bottle",
+   "id": "necessary-wisconsin",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "significant-focus",
+   "id": "silver-genetics",
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pressing-helen",
+   "id": "affected-liquid",
    "metadata": {},
    "source": [
     "# DGE analysis"
@@ -497,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "affecting-bible",
+   "id": "encouraging-financing",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "continental-structure",
+   "id": "quality-screen",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,21 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "apparent-yemen",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "figo_sig_genes <- figo_de_ls %>%\n",
-    "    map(function(df) {\n",
-    "        df %>% dplyr::filter(geneID %in% matrisome_genes, padj < padj_thresh) %>%\n",
-    "        pull(geneID) \n",
-    "    })"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "white-resource",
+   "id": "cross-honolulu",
    "metadata": {},
    "outputs": [
     {
@@ -582,11 +573,11 @@
        "\t<dt>$figo_2_vs_1</dt>\n",
        "\t\t<dd>10</dd>\n",
        "\t<dt>$figo_3_vs_1</dt>\n",
-       "\t\t<dd>64</dd>\n",
+       "\t\t<dd>57</dd>\n",
        "\t<dt>$figo_4_vs_1</dt>\n",
        "\t\t<dd>14</dd>\n",
        "\t<dt>$figo_3_vs_2</dt>\n",
-       "\t\t<dd>26</dd>\n",
+       "\t\t<dd>25</dd>\n",
        "\t<dt>$figo_4_vs_2</dt>\n",
        "\t\t<dd>12</dd>\n",
        "\t<dt>$figo_4_vs_3</dt>\n",
@@ -596,9 +587,9 @@
       "text/latex": [
        "\\begin{description}\n",
        "\\item[\\$figo\\_2\\_vs\\_1] 10\n",
-       "\\item[\\$figo\\_3\\_vs\\_1] 64\n",
+       "\\item[\\$figo\\_3\\_vs\\_1] 57\n",
        "\\item[\\$figo\\_4\\_vs\\_1] 14\n",
-       "\\item[\\$figo\\_3\\_vs\\_2] 26\n",
+       "\\item[\\$figo\\_3\\_vs\\_2] 25\n",
        "\\item[\\$figo\\_4\\_vs\\_2] 12\n",
        "\\item[\\$figo\\_4\\_vs\\_3] 2\n",
        "\\end{description}\n"
@@ -607,11 +598,11 @@
        "$figo_2_vs_1\n",
        ":   10\n",
        "$figo_3_vs_1\n",
-       ":   64\n",
+       ":   57\n",
        "$figo_4_vs_1\n",
        ":   14\n",
        "$figo_3_vs_2\n",
-       ":   26\n",
+       ":   25\n",
        "$figo_4_vs_2\n",
        ":   12\n",
        "$figo_4_vs_3\n",
@@ -624,81 +615,19 @@
        "[1] 10\n",
        "\n",
        "$figo_3_vs_1\n",
-       "[1] 64\n",
+       "[1] 57\n",
        "\n",
        "$figo_4_vs_1\n",
        "[1] 14\n",
        "\n",
        "$figo_3_vs_2\n",
-       "[1] 26\n",
+       "[1] 25\n",
        "\n",
        "$figo_4_vs_2\n",
        "[1] 12\n",
        "\n",
        "$figo_4_vs_3\n",
        "[1] 2\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "94"
-      ],
-      "text/latex": [
-       "94"
-      ],
-      "text/markdown": [
-       "94"
-      ],
-      "text/plain": [
-       "[1] 94"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# DEMGs in each contrast\n",
-    "figo_sig_genes %>% map(length)\n",
-    "# DEMGs unioned\n",
-    "Reduce(union, figo_sig_genes) %>% length()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "recorded-chase",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "figo_mat_de_df <- bind_rows(figo_de_ls) %>%\n",
-    "    select(geneID, base_mean, l2fc, pval, padj, contrast) %>%\n",
-    "    filter(geneID %in% matrisome_genes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "accompanied-greene",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "94"
-      ],
-      "text/latex": [
-       "94"
-      ],
-      "text/markdown": [
-       "94"
-      ],
-      "text/plain": [
-       "[1] 94"
       ]
      },
      "metadata": {},
@@ -724,116 +653,41 @@
     }
    ],
    "source": [
-    "figo_mat_de_df %>%\n",
-    "    filter(padj < padj_thresh) %>%\n",
-    "    group_by(geneID) %>%\n",
-    "    summarize(min_lfc = min(l2fc), max_lfc = max(l2fc)) %>%\n",
-    "    nrow()\n",
+    "figo_sig_genes <- figo_de_ls %>%\n",
+    "    map(function(df) {\n",
+    "        df %>% dplyr::filter(geneID %in% matrisome_genes, padj < padj_thresh, abs(l2fc) > lfc_thresh) %>%\n",
+    "        pull(geneID) \n",
+    "    })\n",
     "\n",
-    "figo_mat_de_df %>%\n",
-    "    filter(padj < padj_thresh, abs(l2fc) > lfc_thresh) %>%\n",
-    "    group_by(geneID) %>%\n",
-    "    summarize(min_lfc = min(l2fc), max_lfc = max(l2fc)) %>%\n",
-    "    nrow()"
+    "# DEMGs in each contrast\n",
+    "figo_sig_genes %>% map(length)\n",
+    "# DEMGs unioned\n",
+    "Reduce(union, figo_sig_genes) %>% length()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "cloudy-industry",
+   "execution_count": 14,
+   "id": "built-tulsa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "figo_umsmg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", dsets[dset_idx], \"_figo_umsmg_list.txt\"))\n",
-    "figo_nsmg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", dsets[dset_idx], \"_figo_nsmg_list.txt\"))\n",
-    "demg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", dsets[dset_idx], \"_demg_list.txt\"))\n",
-    "figo_sig_list <- union(figo_umsmg_list, figo_nsmg_list)"
+    "figo_mat_de_df <- bind_rows(figo_de_ls) %>%\n",
+    "    select(geneID, base_mean, l2fc, pval, padj, contrast) %>%\n",
+    "    filter(geneID %in% matrisome_genes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "accepting-myanmar",
+   "execution_count": 15,
+   "id": "through-offer",
    "metadata": {},
    "outputs": [],
    "source": [
-    "figo_demg_list <- figo_mat_de_df %>%\n",
-    "    filter(padj < padj_thresh, abs(l2fc) > lfc_thresh) %>%\n",
-    "    group_by(geneID) %>%\n",
-    "    summarize(min_lfc = min(l2fc), max_lfc = max(l2fc)) %>%\n",
-    "    pull(geneID)"
+    "if (save_results) {\n",
+    "    figo_mat_de_df %>% write_tsv(paste0(dirs$analysis_dir, \"/feature_selection/\", dsets[dset_idx], \"_figo_pairwise_demg_results.tsv\"))\n",
+    "}"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "positive-dallas",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "44"
-      ],
-      "text/latex": [
-       "44"
-      ],
-      "text/markdown": [
-       "44"
-      ],
-      "text/plain": [
-       "[1] 44"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "figo_demg_list %>%\n",
-    "    intersect(figo_sig_list) %>%\n",
-    "    length()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "ancient-action",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "210"
-      ],
-      "text/latex": [
-       "210"
-      ],
-      "text/markdown": [
-       "210"
-      ],
-      "text/plain": [
-       "[1] 210"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "figo_demg_list %>%\n",
-    "    union(figo_sig_list) %>%\n",
-    "    intersect(demg_list) %>%\n",
-    "    length()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "tender-malawi",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
