All analysis redone. Need to update figures.

--- a/feature_selection_analysis/deg_figo.ipynb
+++ b/feature_selection_analysis/deg_figo.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "juvenile-session",
+   "id": "indonesian-payment",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "catholic-courage",
+   "id": "religious-disaster",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "nervous-spouse",
+   "id": "unable-edition",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,12 +205,12 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "destroyed-gamma",
+   "id": "ancient-variety",
    "metadata": {},
    "outputs": [],
    "source": [
-    "padj_thresh <- 0.01\n",
-    "# padj_thresh <- 0.05\n",
+    "# We want to be very picky for this analysis\n",
+    "alpha_level <- 0.01\n",
     "expr_thresh <- 0\n",
     "lfc_thresh <- log2(2)\n",
     "save_results <- TRUE"
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "green-envelope",
+   "id": "southern-america",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
     "        dds,\n",
     "        contrast = contrast_vec,\n",
     "        pAdjustMethod = \"BH\",\n",
-    "        alpha = padj_thresh,\n",
+    "        alpha = alpha_level,\n",
     "        parallel = TRUE\n",
     "    ) %>%\n",
     "        as_tibble(rownames = \"geneID\") %>%\n",
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "imposed-postage",
+   "id": "domestic-workshop",
    "metadata": {},
    "source": [
     "# Load data"
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "exclusive-counter",
+   "id": "coated-strike",
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stock-dimension",
+   "id": "young-conclusion",
    "metadata": {},
    "source": [
     "# Pre-filter genes"
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "filled-entrance",
+   "id": "indian-notification",
    "metadata": {},
    "outputs": [
     {
@@ -415,6 +415,7 @@
     "    thresh = 0\n",
     ")\n",
     "\n",
+    "# Gene must be expressed in > 1/3 of all samples (including non-cancer samples)\n",
     "sufficiently_expr_genes_df <- all_counts_res_df %>%\n",
     "    dplyr::filter(tot_over_thresh_prop > 1/3)\n",
     "\n",
@@ -425,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "comparable-prairie",
+   "id": "hollow-thumb",
    "metadata": {},
    "source": [
     "# Final data prep"
@@ -434,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "sophisticated-words",
+   "id": "educated-spotlight",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "necessary-wisconsin",
+   "id": "blocked-faith",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "silver-genetics",
+   "id": "abstract-dietary",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "affected-liquid",
+   "id": "centered-silly",
    "metadata": {},
    "source": [
     "# DGE analysis"
@@ -502,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "encouraging-financing",
+   "id": "effective-apparatus",
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "quality-screen",
+   "id": "urban-shadow",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "cross-honolulu",
+   "id": "mounted-group",
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +656,7 @@
    "source": [
     "figo_sig_genes <- figo_de_ls %>%\n",
     "    map(function(df) {\n",
-    "        df %>% dplyr::filter(geneID %in% matrisome_genes, padj < padj_thresh, abs(l2fc) > lfc_thresh) %>%\n",
+    "        df %>% dplyr::filter(geneID %in% matrisome_genes, padj < alpha_level, abs(l2fc) > lfc_thresh) %>%\n",
     "        pull(geneID) \n",
     "    })\n",
     "\n",
@@ -668,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "built-tulsa",
+   "id": "needed-default",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "through-offer",
+   "id": "casual-bowling",
    "metadata": {},
    "outputs": [],
    "source": [
