--- a/meta_analysis/gene_list_overlaps_meta.ipynb
+++ b/meta_analysis/gene_list_overlaps_meta.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "celtic-dialogue",
+   "id": "wrapped-backup",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "-- \u001b[1mAttaching packages\u001b[22m ----------------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------ tidyverse 1.3.0 --\n",
       "\n",
       "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "-- \u001b[1mConflicts\u001b[22m -------------------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "-- \u001b[1mConflicts\u001b[22m --------------------------------------------------------------------- tidyverse_conflicts() --\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n"
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "tough-ireland",
+   "id": "elect-intro",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "green-token",
+   "id": "marked-mongolia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "premium-sociology",
+   "id": "legitimate-population",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "accessible-harmony",
+   "id": "pacific-monaco",
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m----------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-----------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  Division = \u001b[31mcol_character()\u001b[39m,\n",
       "  Category = \u001b[31mcol_character()\u001b[39m,\n",
@@ -121,27 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "removed-imaging",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "unified_cervical_dataunified_uterine_dataunified_uterine_endometrial_data"
-     ]
-    }
-   ],
-   "source": [
-    "for (dset in unified_dsets) {\n",
-    "    cat(dset)\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "happy-victoria",
+   "id": "stock-sauce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,8 +131,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "deadly-replication",
+   "execution_count": 7,
+   "id": "current-estimate",
    "metadata": {},
    "outputs": [
     {
@@ -239,8 +219,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "differential-handle",
+   "execution_count": 8,
+   "id": "known-person",
    "metadata": {},
    "outputs": [
     {
@@ -294,8 +274,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "weird-candy",
+   "execution_count": 9,
+   "id": "pressing-walter",
    "metadata": {},
    "outputs": [
     {
@@ -349,8 +329,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "chronic-clarity",
+   "execution_count": 10,
+   "id": "selective-miami",
    "metadata": {},
    "outputs": [
     {
@@ -404,8 +384,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "conscious-manufacturer",
+   "execution_count": 11,
+   "id": "ambient-sphere",
    "metadata": {},
    "outputs": [
     {
@@ -434,8 +414,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "headed-martin",
+   "execution_count": 12,
+   "id": "developmental-central",
    "metadata": {},
    "outputs": [
     {
@@ -464,8 +444,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "unknown-bradford",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "0"
+      ],
+      "text/latex": [
+       "0"
+      ],
+      "text/markdown": [
+       "0"
+      ],
+      "text/plain": [
+       "[1] 0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "survival_all_sig_list <- Reduce(intersect, survival_sig_lists)\n",
+    "survival_all_sig_list %>% length()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
-   "id": "missing-spotlight",
+   "id": "emerging-appliance",
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "split-evolution",
+   "id": "activated-shield",
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "complimentary-depth",
+   "id": "raising-approach",
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "eligible-consolidation",
+   "id": "provincial-father",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "connected-wings",
+   "id": "peripheral-operations",
    "metadata": {},
    "outputs": [],
    "source": []
