--- a/meta_analysis/gene_lists_and_meta.ipynb
+++ b/meta_analysis/gene_lists_and_meta.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "healthy-samuel",
+   "id": "local-refrigerator",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "-- \u001b[1mAttaching packages\u001b[22m ----------------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------ tidyverse 1.3.0 --\n",
       "\n",
       "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "-- \u001b[1mConflicts\u001b[22m -------------------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "-- \u001b[1mConflicts\u001b[22m --------------------------------------------------------------------- tidyverse_conflicts() --\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n"
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "southwest-edinburgh",
+   "id": "respiratory-military",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "accredited-bhutan",
+   "id": "aboriginal-basis",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "normal-prompt",
+   "id": "sacred-independence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "iraqi-victorian",
+   "id": "combined-muslim",
    "metadata": {},
    "source": [
     "# Data"
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fewer-combination",
+   "id": "loving-sensitivity",
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m----------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-----------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  Division = \u001b[31mcol_character()\u001b[39m,\n",
       "  Category = \u001b[31mcol_character()\u001b[39m,\n",
@@ -112,7 +112,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m----------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-----------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  .default = col_double(),\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m\n",
@@ -121,7 +121,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m----------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-----------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  baseMean = \u001b[32mcol_double()\u001b[39m,\n",
@@ -135,7 +135,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m----------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-----------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  coeff = \u001b[32mcol_double()\u001b[39m\n",
@@ -143,7 +143,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m----------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-----------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  vital_pval = \u001b[32mcol_double()\u001b[39m,\n",
@@ -153,7 +153,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m----------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-----------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  km_pval = \u001b[32mcol_double()\u001b[39m,\n",
@@ -165,7 +165,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m----------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-----------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  figo_stage_1_coefs = \u001b[32mcol_double()\u001b[39m,\n",
@@ -176,7 +176,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m----------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-----------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  figo_stage_1_pval = \u001b[32mcol_double()\u001b[39m,\n",
@@ -195,7 +195,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m----------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-----------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  base_mean = \u001b[32mcol_double()\u001b[39m,\n",
@@ -207,7 +207,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m----------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-----------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  .default = col_double(),\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
@@ -217,7 +217,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m----------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-----------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  module = \u001b[31mcol_character()\u001b[39m,\n",
       "  figo_stage_1_cor = \u001b[32mcol_double()\u001b[39m,\n",
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "analyzed-sector",
+   "id": "focal-genome",
    "metadata": {},
    "source": [
     "# DGE analysis"
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "northern-trauma",
+   "id": "maritime-realtor",
    "metadata": {},
    "source": [
     "## DEG"
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "informative-mistake",
+   "id": "geographic-collector",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "systematic-punch",
+   "id": "nervous-brake",
    "metadata": {},
    "source": [
     "## DEMG"
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "front-headquarters",
+   "id": "systematic-immunology",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "limited-adobe",
+   "id": "little-japan",
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "normal-escape",
+   "id": "alpha-protocol",
    "metadata": {},
    "source": [
     "# Uni/multivariate analysis"
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fancy-saturday",
+   "id": "incorrect-sullivan",
    "metadata": {},
    "source": [
     "## FIGO"
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "victorian-audio",
+   "id": "oriental-carroll",
    "metadata": {},
    "source": [
     "### LASSO multinomial regression"
@@ -527,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "related-steps",
+   "id": "promotional-directory",
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "super-carry",
+   "id": "external-lighting",
    "metadata": {},
    "source": [
     "### Welch ANOVA"
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ancient-pathology",
+   "id": "therapeutic-postage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "realistic-operation",
+   "id": "confused-flashing",
    "metadata": {},
    "source": [
     "# FIGO pairwise DGE Analysis"
@@ -588,9 +588,28 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "steady-earthquake",
+   "id": "lesbian-companion",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "88"
+      ],
+      "text/latex": [
+       "88"
+      ],
+      "text/markdown": [
+       "88"
+      ],
+      "text/plain": [
+       "[1] 88"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "figo_pairwise_demg_meta_ls <- list()\n",
     "figo_pairwise_demg_meta_ls[[\"genes\"]] <- figo_pairwise_demg_results_df %>%\n",
@@ -598,12 +617,13 @@
     "    group_by(geneID) %>%\n",
     "    summarize(n = n()) %>%\n",
     "    pull(geneID)\n",
-    "figo_pairwise_demg_meta_ls[[\"n_sig\"]] <- length(figo_pairwise_demg_meta_ls[[\"genes\"]])"
+    "figo_pairwise_demg_meta_ls[[\"n_sig\"]] <- length(figo_pairwise_demg_meta_ls[[\"genes\"]])\n",
+    "figo_pairwise_demg_meta_ls$n_sig"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "impaired-stress",
+   "id": "united-thing",
    "metadata": {},
    "source": [
     "### Point-biserial correlation with FIGO"
@@ -612,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ultimate-matter",
+   "id": "dramatic-agenda",
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "trying-relief",
+   "id": "realistic-express",
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "affecting-pavilion",
+   "id": "happy-saskatchewan",
    "metadata": {},
    "source": [
     "## Survival"
@@ -722,7 +742,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "differential-destination",
+   "id": "fatty-liberal",
    "metadata": {},
    "source": [
     "### LASSO Cox PH"
@@ -731,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "positive-spice",
+   "id": "complete-blind",
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +781,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "academic-bookmark",
+   "id": "narrow-membrane",
    "metadata": {},
    "source": [
     "### Univariate KM/Cox PH"
@@ -770,7 +790,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "african-pension",
+   "id": "attached-apartment",
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +826,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "based-harris",
+   "id": "adopted-johnson",
    "metadata": {},
    "source": [
     "### Censored time screen"
@@ -815,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "scenic-audience",
+   "id": "scientific-transsexual",
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +868,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "ceramic-capture",
+   "id": "opponent-canal",
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +901,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "interim-confusion",
+   "id": "particular-afternoon",
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "continuous-project",
+   "id": "motivated-netherlands",
    "metadata": {},
    "source": [
     "# WGCNA"
@@ -956,7 +976,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "cooperative-yeast",
+   "id": "jewish-rhythm",
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "greatest-spice",
+   "id": "viral-marina",
    "metadata": {},
    "outputs": [
     {
@@ -1048,7 +1068,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "statewide-biodiversity",
+   "id": "cross-square",
    "metadata": {},
    "outputs": [
     {
@@ -1120,7 +1140,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "related-falls",
+   "id": "muslim-montana",
    "metadata": {},
    "outputs": [
     {
@@ -1188,7 +1208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "interim-intention",
+   "id": "signal-negotiation",
    "metadata": {},
    "source": [
     "## TOM meta"
@@ -1197,7 +1217,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "sunset-palmer",
+   "id": "familiar-guarantee",
    "metadata": {},
    "outputs": [
     {
@@ -1247,7 +1267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "australian-blogger",
+   "id": "activated-acrylic",
    "metadata": {},
    "source": [
     "# Create Lists"
@@ -1256,7 +1276,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "unable-finish",
+   "id": "falling-elements",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1291,7 +1311,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "official-connection",
+   "id": "green-adolescent",
    "metadata": {},
    "outputs": [
     {
@@ -1480,7 +1500,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "direct-writing",
+   "id": "forty-spring",
    "metadata": {},
    "source": [
     "# Save lists"
@@ -1489,7 +1509,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "bridal-chess",
+   "id": "contemporary-stranger",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1506,7 +1526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "three-cosmetic",
+   "id": "tight-change",
    "metadata": {},
    "outputs": [],
    "source": []
